--- a/app/src/main/res/layout/activity_paytm.xml
+++ b/app/src/main/res/layout/activity_paytm.xml
@@ -19,169 +19,165 @@
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
         android:background="@drawable/grey_gradient_bg">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
 
-        <LinearLayout
-            android:id="@+id/llyPaytm"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_30dp"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
-                android:textSize="@dimen/profile_name_text_size"
-                android:typeface="monospace"
-                android:text="@string/transferPaytm"
-                 />
-
-            <TextView
-                android:id="@+id/text_rupees"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
-                android:drawableLeft="@drawable/pager_00_inactive"
-                android:drawablePadding="@dimen/margin_5"
-                android:text="125.26"
-                android:textSize="@dimen/profile_name"
-                android:typeface="monospace" />
-
-            <TextView
-                android:id="@+id/text_avail_bal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
-                android:text="@string/avail_bal"
-                android:textSize="@dimen/form_textsize"
-                android:typeface="monospace" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="@dimen/margin_20"
-            android:layout_below="@id/llyPaytm"
-            android:orientation="vertical">
-
-
-            <RelativeLayout
-                android:id="@+id/rlyMobile"
+            <LinearLayout
+                android:id="@+id/llyPaytm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_100"
-                android:layout_marginLeft="@dimen/left_right_margin_for_edittext"
-                android:layout_marginRight="@dimen/left_right_margin_for_edittext"
-                >
-
-                <ImageView
-                    android:id="@+id/imvMobile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/margin_5"
-                    android:src="@drawable/mobile_red"/>
-
-
-                <EditText
-                    android:id="@+id/edtMobile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:typeface="monospace"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/imvMobile"
-                    android:gravity="start|center_vertical"
-                    android:background="@null"
-                    android:maxLength="10"
-                    android:layout_marginLeft="@dimen/margin_10"
-                    android:layout_marginStart="@dimen/margin_10"
-                    android:imeOptions="actionNext"
-                    android:hint="@string/enter_your_mobile_number"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="@dimen/form_textsize" />
-
-
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/bottom_line"
-                    android:layout_below="@id/imvMobile"
-                    android:background="@color/colorPrimaryDark"/>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/rlyAmount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_30"
-                android:layout_marginBottom="@dimen/padding_30"
-                android:layout_marginLeft="@dimen/left_right_margin_for_edittext"
-                android:layout_marginRight="@dimen/left_right_margin_for_edittext"
-                >
-
-                <ImageView
-                    android:id="@+id/imvAmount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/margin_5"
-                    android:src="@drawable/amount_red"/>
-
-
-                <EditText
-                    android:id="@+id/editAmount"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    android:typeface="monospace"
-                    android:layout_marginLeft="@dimen/margin_10"
-                    android:layout_marginStart="@dimen/margin_10"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/imvAmount"
-                    android:gravity="start|center_vertical"
-                    android:background="@null"
-                    android:maxLength="5"
-                    android:imeOptions="actionDone"
-                    android:hint="Amount"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="@dimen/form_textsize" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/bottom_line"
-                    android:layout_below="@id/imvAmount"
-                    android:background="@color/colorPrimaryDark"/>
-
-            </RelativeLayout>
-
-
-            <TextView
-                android:id="@+id/txvSubmit"
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:layout_marginTop="@dimen/margin_10"
-                android:background="@drawable/red_gradient_rounded_bg"
-                android:elevation="@dimen/padding_5"
+                android:layout_marginTop="@dimen/margin_30dp"
                 android:gravity="center"
-                android:paddingLeft="@dimen/padding_50"
-                android:paddingRight="@dimen/padding_50"
-                android:text="SUBMIT"
-                android:textColor="@color/white"
-                android:textSize="@dimen/form_textsize"
-                android:typeface="sans"
-                android:visibility="visible" />
-        </LinearLayout>
+                android:orientation="vertical">
 
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:text="@string/transferPaytm"
+                    android:textSize="@dimen/profile_name_text_size"
+                    android:typeface="monospace" />
+
+                <TextView
+                    android:id="@+id/text_rupees"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:drawableLeft="@drawable/pager_00_inactive"
+                    android:drawablePadding="@dimen/margin_5"
+                    android:text="125.26"
+                    android:textSize="@dimen/profile_name"
+                    android:typeface="monospace" />
+
+                <TextView
+                    android:id="@+id/text_avail_bal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:text="@string/avail_bal"
+                    android:textSize="@dimen/form_textsize"
+                    android:typeface="monospace" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/llyPaytm"
+                android:layout_marginTop="@dimen/margin_20"
+                android:gravity="center"
+                android:orientation="vertical">
+
+
+                <RelativeLayout
+                    android:id="@+id/rlyMobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/left_right_margin_for_edittext"
+                    android:layout_marginRight="@dimen/left_right_margin_for_edittext"
+                    android:layout_marginTop="@dimen/padding_100">
+
+                    <ImageView
+                        android:id="@+id/imvMobile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/margin_5"
+                        android:src="@drawable/mobile_red" />
+
+
+                    <EditText
+                        android:id="@+id/edtMobile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:layout_marginStart="@dimen/margin_10"
+                        android:layout_toRightOf="@+id/imvMobile"
+                        android:background="@null"
+                        android:gravity="start|center_vertical"
+                        android:hint="@string/enter_your_mobile_number"
+                        android:imeOptions="actionNext"
+                        android:inputType="number"
+                        android:maxLength="10"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textColorHint="@color/colorPrimaryDark"
+                        android:textSize="@dimen/form_textsize"
+                        android:typeface="monospace" />
+
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/bottom_line"
+                        android:layout_below="@id/imvMobile"
+                        android:background="@color/colorPrimaryDark" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rlyAmount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/padding_30"
+                    android:layout_marginLeft="@dimen/left_right_margin_for_edittext"
+                    android:layout_marginRight="@dimen/left_right_margin_for_edittext"
+                    android:layout_marginTop="@dimen/padding_30">
+
+                    <ImageView
+                        android:id="@+id/imvAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/margin_5"
+                        android:src="@drawable/amount_red" />
+
+
+                    <EditText
+                        android:id="@+id/editAmount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/margin_10"
+                        android:layout_marginStart="@dimen/margin_10"
+                        android:layout_toRightOf="@+id/imvAmount"
+                        android:background="@null"
+                        android:gravity="start|center_vertical"
+                        android:hint="Amount"
+                        android:imeOptions="actionDone"
+                        android:inputType="numberDecimal"
+                        android:maxLength="5"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textColorHint="@color/colorPrimaryDark"
+                        android:textSize="@dimen/form_textsize"
+                        android:typeface="monospace" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/bottom_line"
+                        android:layout_below="@id/imvAmount"
+                        android:background="@color/colorPrimaryDark" />
+
+                </RelativeLayout>
+
+
+                <TextView
+                    android:id="@+id/txvSubmit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:background="@drawable/red_gradient_rounded_bg"
+                    android:elevation="@dimen/padding_5"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/padding_50"
+                    android:paddingRight="@dimen/padding_50"
+                    android:text="SUBMIT"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/form_textsize"
+                    android:typeface="sans"
+                    android:visibility="visible" />
+            </LinearLayout>
+
+        </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
