--- a/app/src/main/res/layout/fragment_my_points.xml
+++ b/app/src/main/res/layout/fragment_my_points.xml
@@ -6,125 +6,135 @@
     tools:context="com.iqmojo.iq_mojo.ui.fragments.MyPointsFragment">
 
 
-
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/padding_30"
-        android:id="@+id/llyProfile"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:weightSum="10">
+            android:orientation="vertical">
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="5"
-                android:background="@color/grey_text_color" />
+            <LinearLayout
+                android:id="@+id/llyProfile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="@dimen/padding_30"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/profile_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/profile_pic"
-                app:civ_border_color="@color/grey_text_color"
-                app:civ_border_width="1dp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:weightSum="10">
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="5"
-                android:background="@color/grey_text_color" />
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="5"
+                        android:background="@color/grey_text_color" />
+
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/profile_image"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/profile_pic"
+                        app:civ_border_color="@color/grey_text_color"
+                        app:civ_border_width="1dp" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="5"
+                        android:background="@color/grey_text_color" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/text_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:text="Ramesh Kumar"
+                    android:textSize="@dimen/profile_name_text_size"
+                    android:typeface="monospace" />
+
+                <TextView
+                    android:id="@+id/text_rupees"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_7"
+                    android:drawableLeft="@drawable/pager_00_inactive"
+                    android:drawablePadding="@dimen/margin_5"
+                    android:text="125.26"
+                    android:textSize="@dimen/profile_name"
+                    android:typeface="monospace" />
+
+                <TextView
+                    android:id="@+id/text_avail_bal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:text="@string/avail_bal"
+                    android:textSize="@dimen/form_textsize"
+                    android:typeface="monospace" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/txvAddCoins"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/rlyMobile"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="@dimen/margin_20"
+                    android:layout_marginLeft="@dimen/margin_30dp"
+                    android:layout_marginRight="@dimen/margin_30dp"
+                    android:background="@drawable/red_gradient_rounded_bg"
+                    android:elevation="@dimen/padding_5"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/padding_50"
+                    android:paddingRight="@dimen/padding_50"
+                    android:text="Add Coins"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/form_textsize"
+                    android:typeface="monospace"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/txvRedeemCoins"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="@dimen/margin_30dp"
+                    android:layout_marginLeft="@dimen/margin_30dp"
+                    android:layout_marginRight="@dimen/margin_30dp"
+                    android:background="@drawable/red_gradient_rounded_bg"
+                    android:elevation="@dimen/padding_5"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/padding_50"
+                    android:paddingRight="@dimen/padding_50"
+                    android:text="Redeem Coins"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/form_textsize"
+                    android:typeface="monospace"
+                    android:visibility="visible" />
+            </LinearLayout>
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/text_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_10"
-            android:text="Ramesh Kumar"
-            android:textSize="@dimen/profile_name_text_size"
-            android:typeface="monospace" />
-
-        <TextView
-            android:id="@+id/text_rupees"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_7"
-            android:drawableLeft="@drawable/pager_00_inactive"
-            android:drawablePadding="@dimen/margin_5"
-            android:text="125.26"
-            android:textSize="@dimen/profile_name"
-            android:typeface="monospace" />
-
-        <TextView
-            android:id="@+id/text_avail_bal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_10"
-            android:text="@string/avail_bal"
-            android:textSize="@dimen/form_textsize"
-            android:typeface="monospace" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@id/llyProfile"
-        android:orientation="vertical">
-
-
-        <TextView
-            android:id="@+id/txvAddCoins"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@id/rlyMobile"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/margin_30dp"
-            android:background="@drawable/red_gradient_rounded_bg"
-            android:elevation="@dimen/padding_5"
-            android:gravity="center"
-            android:paddingLeft="@dimen/padding_50"
-            android:paddingRight="@dimen/padding_50"
-            android:layout_marginLeft="@dimen/margin_30dp"
-            android:layout_marginRight="@dimen/margin_30dp"
-            android:text="Add Coins"
-            android:textColor="@color/white"
-            android:textSize="@dimen/app_text_size"
-            android:typeface="monospace"
-            android:visibility="visible" />
-        <TextView
-            android:id="@+id/txvRedeemCoins"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/margin_30dp"
-            android:background="@drawable/red_gradient_rounded_bg"
-            android:elevation="@dimen/padding_5"
-            android:gravity="center"
-            android:layout_marginLeft="@dimen/margin_30dp"
-            android:layout_marginRight="@dimen/margin_30dp"
-            android:paddingLeft="@dimen/padding_50"
-            android:paddingRight="@dimen/padding_50"
-            android:text="Redeem Coins"
-            android:textColor="@color/white"
-            android:textSize="@dimen/app_text_size"
-            android:typeface="monospace"
-            android:visibility="visible" />
-    </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
 
