--- a/app/src/main/res/layout/transaction_list_childs.xml
+++ b/app/src/main/res/layout/transaction_list_childs.xml
@@ -2,50 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding_5">
+    android:paddingTop="@dimen/padding_12">
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textDate"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/app_text_size"
+            android:gravity="center"
             android:typeface="monospace"
-            android:layout_alignParentLeft="true"
-            android:text=""
-            android:paddingLeft="@dimen/margin_10"
+            android:text="bfui"
 
             />
 
 
         <TextView
             android:id="@+id/textActivity"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/app_text_size"
+            android:gravity="center"
             android:typeface="monospace"
-            android:layout_centerInParent="true"
-            android:text=""
+            android:text="effw"
             />
 
         <TextView
             android:id="@+id/textAmount"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/app_text_size"
             android:typeface="monospace"
-            android:text=""
-            android:layout_alignParentRight="true"
-            android:paddingRight="@dimen/margin_10"
+            android:text="wsefwef"
 
             />
 
-    </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
