--- a/app/src/main/res/layout/activity_game_result.xml
+++ b/app/src/main/res/layout/activity_game_result.xml
@@ -153,6 +153,26 @@
             </RelativeLayout>
 
 
+            <TextView
+                android:id="@+id/txvPlay"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:minWidth="180dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/margin_40dp"
+                android:layout_marginBottom="@dimen/margin_30dp"
+                android:background="@drawable/red_gradient_rounded_bg"
+                android:elevation="@dimen/padding_5"
+                android:gravity="center"
+                android:paddingLeft="@dimen/padding_45"
+                android:paddingRight="@dimen/padding_45"
+                android:text="PLAY AGAIN"
+                android:textColor="@color/white"
+                android:textSize="@dimen/form_textsize"
+                android:typeface="sans"
+                android:visibility="visible" />
+
+
 
         </LinearLayout>
     </ScrollView>
