--- a/app/src/main/res/layout/activity_add_coins_details.xml
+++ b/app/src/main/res/layout/activity_add_coins_details.xml
@@ -17,8 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:fillViewport="true"
-        android:background="@drawable/grey_gradient_bg">
+        android:background="@drawable/grey_gradient_bg"
+        android:fillViewport="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -68,9 +68,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_10"
-                    android:text="Ramesh Kumar"
                     android:textSize="@dimen/profile_name_text_size"
-                    android:typeface="monospace" />
+                    android:typeface="monospace"
+                    tools:text="Ramesh Kumar" />
 
                 <TextView
                     android:id="@+id/text_rupees"
@@ -79,9 +79,9 @@
                     android:layout_marginTop="@dimen/margin_7"
                     android:drawableLeft="@drawable/pager_00_inactive"
                     android:drawablePadding="@dimen/margin_5"
-                    android:text="125.26"
                     android:textSize="@dimen/profile_name"
-                    android:typeface="monospace" />
+                    android:typeface="monospace"
+                    tools:text="125.26" />
 
                 <TextView
                     android:id="@+id/text_avail_bal"
@@ -96,139 +96,16 @@
 
 
             <LinearLayout
+                android:id="@+id/dynamicLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_below="@id/llyProfile"
-                android:gravity="center"
-                android:layout_marginTop="@dimen/margin_20"
                 android:layout_marginBottom="@dimen/margin_20"
+                android:layout_marginTop="@dimen/margin_20"
+                android:gravity="center"
                 android:orientation="vertical">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginBottom="@dimen/margin_10"
-                    android:background="@color/mild_grey">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_alignParentLeft="true"
-                android:gravity="center"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_15"
-                android:paddingLeft="@dimen/padding_15"
-                android:text="50 Coins"
-                android:drawableLeft="@drawable/iq_add_icon"
-                android:drawablePadding="@dimen/margin_10"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/drawer_text_size"
-                android:typeface="monospace"
-                android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/txv100"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="@dimen/margin_30dp"
-                        android:layout_marginRight="@dimen/margin_15"
-                        android:background="@drawable/red_gradient_rounded_bg"
-                        android:gravity="center"
-                        android:paddingLeft="@dimen/padding_50"
-                        android:paddingRight="@dimen/padding_50"
-                        android:text="100"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/form_textsize"
-                        android:typeface="monospace"
-                        android:visibility="visible" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginBottom="@dimen/margin_10"
-                    android:background="@color/mild_grey">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_alignParentLeft="true"
-                android:gravity="center"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_15"
-                android:paddingLeft="@dimen/padding_15"
-                android:text="100 Coins"
-                android:drawableLeft="@drawable/iq_add_icon"
-                android:drawablePadding="@dimen/margin_10"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/drawer_text_size"
-                android:typeface="monospace"
-                android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/txv200"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="@dimen/margin_30dp"
-                        android:layout_marginRight="@dimen/margin_15"
-                        android:background="@drawable/red_gradient_rounded_bg"
-                        android:gravity="center"
-                        android:paddingLeft="@dimen/padding_50"
-                        android:paddingRight="@dimen/padding_50"
-                        android:text="200"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/form_textsize"
-                        android:typeface="monospace"
-                        android:visibility="visible" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginBottom="@dimen/margin_10"
-                    android:background="@color/mild_grey">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_alignParentLeft="true"
-                android:gravity="center"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_15"
-                android:paddingLeft="@dimen/padding_15"
-                android:text="250 Coins"
-                android:drawableLeft="@drawable/iq_add_icon"
-                android:drawablePadding="@dimen/margin_10"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/drawer_text_size"
-                android:typeface="monospace"
-                android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/txv300"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="@dimen/margin_30dp"
-                        android:layout_marginRight="@dimen/margin_15"
-                        android:background="@drawable/red_gradient_rounded_bg"
-                        android:gravity="center"
-                        android:paddingLeft="@dimen/padding_50"
-                        android:paddingRight="@dimen/padding_50"
-                        android:text="300"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/form_textsize"
-                        android:typeface="monospace"
-                        android:visibility="visible" />
-                </RelativeLayout>
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
