--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,6 +10,7 @@
     android:contentInsetLeft="0dp"
     android:contentInsetRight="0dp"
     android:contentInsetStart="0dp"
+    android:contentInsetStartWithNavigation="0dp"
     android:elevation="@dimen/padding_5"
     android:gravity="center_vertical"
     android:paddingEnd="@dimen/padding_10"
@@ -19,33 +20,39 @@
     app:contentInsetRight="0dp"
     app:contentInsetStart="0dp"
     app:contentInsetStartWithNavigation="0dp"
-    android:contentInsetStartWithNavigation="0dp"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+    <LinearLayout
+        android:id="@+id/llyCoins"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end">
 
-    <ImageView
-        android:id="@+id/logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginEnd="@dimen/padding_2"
-        android:layout_marginRight="@dimen/padding_2"
-        android:contentDescription="@string/app_name"
-        android:padding="@dimen/padding_5"
-        android:src="@drawable/menu_0"
-        android:visibility="visible" />
-    <TextView
-        android:id="@+id/txvCoins"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="13,200"
-        android:layout_marginRight="@dimen/margin_8"
-        android:layout_gravity="end"
-        android:typeface="serif"
-        android:textColor="@color/white"
-        android:textSize="@dimen/drawer_text_size"
-        />
+        <ImageView
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="@dimen/padding_2"
+            android:layout_marginRight="@dimen/padding_2"
+            android:contentDescription="@string/app_name"
+            android:padding="@dimen/padding_5"
+            android:src="@drawable/menu_0"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/txvCoins"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginRight="@dimen/margin_8"
+            android:text="13,200"
+            android:textColor="@color/white"
+            android:textSize="@dimen/drawer_text_size"
+            android:typeface="serif" />
+
+    </LinearLayout>
 
 
 </android.support.v7.widget.Toolbar>
